Resolves: tdf#151460 Scale and round time diff fiddling with floating point

Change-Id: I5cf4e16692d55f30cc06723a323b4cd0408aaab7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141216
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins